src/objects/SchneiderTest__c.object
<CustomObject>
    <description>Test</description>
    <fields>
        <fullName>Test2__c</fullName>
        <description>Test</description>
        <label>Test2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Test3__c</fullName>
        <label>Test3</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Test4__c</fullName>
        <label>Test4</label>
        <type>Date</type>
    </fields>
    <label>SchneiderTest</label>
    <nameField>
        <label>SchneiderTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SchneiderTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TestVR</fullName>
        <active>true</active>
        <description>NA1</description>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Pavan&quot;</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TestVR2</fullName>
        <active>true</active>
        <description>Test</description>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Pavan&quot;</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TestVR3</fullName>
        <active>true</active>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Test&quot;</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
</CustomObject>